# haskell-advent-of-code

./: aoc.cabal
app/: Aoc1.hs  Aoc2.hs  Aoc3.hs  Aoc4.hs
