cabal-version:      2.4
name:               aoc
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Philipp Tanlak
maintainer:         philipp.tanlak@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable aoc1
    main-is:   Aoc1.hs
    build-depends:
        base ^>=4.16.4.0,
        split ^>=0.2.3.5
    hs-source-dirs:   app
    default-language: Haskell2010

executable aoc2
    main-is: Aoc2.hs
    build-depends:
        base ^>=4.16.4.0,
        split ^>=0.2.3.5
    hs-source-dirs:   app
    default-language: Haskell2010

executable aoc3
    main-is: Aoc3.hs
    build-depends:
        base ^>=4.16.4.0,
        split ^>=0.2.3.5,
        Unique ^>=0.4.7.9,
    hs-source-dirs:   app
    default-language: Haskell2010

executable aoc4
    main-is: Aoc4.hs
    build-depends:
        base ^>=4.16.4.0,
        split ^>=0.2.3.5,
    hs-source-dirs:   app
    default-language: Haskell2010

